# kryon-renderer

./: .gitignore  .gitmodules  BUNDLING.md  CLAUDE.md  Cargo.toml  LICENSE  MULTI_VM_ROADMAP.md  REACTIVE_VARIABLES_USAGE.md  README.md  ROADMAP.md  ROADMAP_LAYOUT.md  build.sh  bundle_krb.sh  debug_output.txt  debug_output2.txt  debug_output3.txt  debug_output4.txt  debug_output5.txt  final_test.txt  hello_world_bundled_info.txt  print_test.rs  run_examples.sh  shell.nix  temp_test.rs  test_examples.sh  test_krb_parser.rs  test_percentage.kry  test_print.lua  test_script_system.rs  test_transform_debug.rs
crates/kryon-core/: Cargo.toml
crates/kryon-core/src/: elements.rs  events.rs  krb.rs  layout_units.rs  lib.rs  properties.rs  property_cache.rs  property_registry.rs  resources.rs  style.rs  text.rs
crates/kryon-layout/: Cargo.toml
crates/kryon-layout/src/: constraints.rs  flexbox.rs  lib.rs  taffy_engine.rs
crates/kryon-ratatui/: Cargo.toml
crates/kryon-ratatui/src/: lib.rs
crates/kryon-raylib/: Cargo.toml
crates/kryon-raylib/src/: lib.rs
crates/kryon-render/: Cargo.toml
crates/kryon-render/src/: events.rs  lib.rs  primitives.rs  test.rs  text.rs  text_manager.rs  wasm.rs
crates/kryon-runtime/: Cargo.toml
crates/kryon-runtime/src/: backends.rs  event_system.rs  lib.rs  lua_bridge.lua  lua_vm.rs  script_system.rs  shared_data.rs  template_engine.rs  vm_registry.rs  vm_trait.rs
crates/kryon-runtime/src/script/: engine_trait.rs  error.rs  mod.rs  registry.rs
crates/kryon-runtime/src/script/lua/: bridge.rs  bytecode.rs  mod.rs  native_renderer.rs  reactive.rs
crates/kryon-web/: Cargo.toml  README.md  build.sh  index.html  wasm-pack.toml
crates/kryon-web/examples/: complete_demo.html
crates/kryon-web/src/: animation.rs  asset_loader.rs  canvas_renderer.rs  dom_renderer.rs  event_handler.rs  lib.rs  profiler.rs  tests.rs  texture_manager.rs  utils.rs  webgpu_renderer.rs  winit_integration.rs
crates/kryon-web/src/shaders/: gradient.wgsl  mod.rs  rect.wgsl  text.wgsl
crates/kryon-wgpu/: Cargo.toml
crates/kryon-wgpu/src/: lib.rs  resources.rs  shaders.rs  test.rs  text.rs  vertex.rs  web_renderer.rs
crates/kryon-wgpu/src/shaders/: rect.wgsl  text.wgsl
examples/basic-wgpu/: Cargo.toml
examples/basic-wgpu/src/: main.rs
examples/terminal-ui/: Cargo.toml
examples/terminal-ui/src/: main.rs
src/: debug_script_system.rs  main.rs
test-files/: sample.kry
tests/: debug_renderer_test.rs  screenshot_test.rs  test_input_types.rs
