[package]
name = "kryon-renderer"
version = "0.1.0"
edition = "2021"
authors = ["Kryon Labs"]
description = "Standalone renderer for Kryon Binary (.krb) files"
license = "0BSD"

[[bin]]
name = "kryon-renderer"
path = "src/bin/kryon-renderer.rs"

[[bin]]
name = "kryon-renderer-wgpu"
path = "src/bin/kryon-renderer-wgpu.rs"
required-features = ["wgpu"]

[[bin]]
name = "kryon-renderer-ratatui"
path = "src/bin/kryon-renderer-ratatui.rs"
required-features = ["ratatui"]

[[bin]]
name = "kryon-renderer-raylib"
path = "src/bin/kryon-renderer-raylib.rs"
required-features = ["raylib"]

[[bin]]
name = "kryon-renderer-debug"
path = "src/bin/kryon-renderer-debug.rs"


[workspace]
members = [
    "crates/kryon-core",
    "crates/kryon-layout", 
    "crates/kryon-render",
    "crates/kryon-wgpu",
    "crates/kryon-ratatui",
    "crates/kryon-raylib",
    "crates/kryon-runtime"
]

[dependencies]
# Core crates
kryon-core = { path = "crates/kryon-core" }
kryon-layout = { path = "crates/kryon-layout" }
kryon-runtime = { path = "crates/kryon-runtime" }
kryon-render = { path = "crates/kryon-render" }

# Optional backend crates
kryon-wgpu = { path = "crates/kryon-wgpu", optional = true }
kryon-ratatui = { path = "crates/kryon-ratatui", optional = true }
kryon-raylib = { path = "crates/kryon-raylib", optional = true }

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
glam = "0.25"

# WGPU backend dependencies (optional)
wgpu = { version = "0.19", optional = true }
winit = { version = "0.29", optional = true }
pollster = { version = "0.3", optional = true }

# Terminal backend dependencies (optional)
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# Raylib backend dependencies (optional)
raylib = { version = "5.0", optional = true }

[features]
default = ["raylib", "kryon-runtime/lua-vm"]
wgpu = ["dep:kryon-wgpu", "dep:wgpu", "dep:winit", "dep:pollster", "kryon-runtime/wgpu", "kryon-runtime/lua-vm"]
ratatui = ["dep:kryon-ratatui", "dep:ratatui", "dep:crossterm", "kryon-runtime/ratatui", "kryon-runtime/lua-vm"]
raylib = ["dep:kryon-raylib", "dep:raylib", "kryon-runtime/raylib", "kryon-runtime/lua-vm"]

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
tracing = "0.1"
bitflags = "2.5" 

# Rendering
wgpu = "0.19"
winit = "0.29"
ratatui = "0.26"
crossterm = "0.27"

# Async
pollster = "0.3"
tokio = { version = "1.0", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true