# crates/kryon-ratatui/Cargo.toml

[package]
name = "kryon-ratatui"
version = "0.1.0"
edition = "2021"

# --- REGULAR DEPENDENCIES ---
[dependencies]
kryon-core = { path = "../kryon-core" }
kryon-render = { path = "../kryon-render" }
kryon-layout = { path = "../kryon-layout" }
ratatui = { workspace = true }
crossterm = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# --- DEVELOPMENT-ONLY DEPENDENCIES ---
[dev-dependencies]
insta = { version = "1.34", features = ["serde"] }
