# crates/kryon-render/Cargo.toml
[package]
name = "kryon-render"
version = "0.1.0"
edition = "2021"

[dependencies]
kryon-core = { path = "../kryon-core" }
kryon-layout = { path = "../kryon-layout" }
glam = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

# Text rendering
cosmic-text = { version = "0.13", optional = true }

# WASM runtime (optional)
wasmtime = { version = "25.0", optional = true }

# Web dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }

[features]
default = ["cosmic-text"]
wasm = ["wasmtime"]
web = ["wasm-bindgen", "web-sys"]