# crates/kryon-wgpu/Cargo.toml
[package]
name = "kryon-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
kryon-core = { path = "../kryon-core" }
kryon-render = { path = "../kryon-render" }
kryon-layout = { path = "../kryon-layout" }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }

# Font rendering
fontdue = "0.8"
image = "0.24"

# Web dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
web = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook", "kryon-core/web"]