# examples/basic-wgpu/Cargo.toml
[package]
name = "basic-wgpu-example"
version = "0.1.0"
edition = "2021"

[dependencies]
kryon-runtime = { path = "../../crates/kryon-runtime", features = ["wgpu"] }
kryon-render = { path = "../../crates/kryon-render" }
winit = { workspace = true }
pollster = { workspace = true }
env_logger = "0.10"
anyhow = { workspace = true }